Hierarchical Dropdown with dynamic object

--- a/HierarchicalControls/Views/Home/StudentsList.cshtml
+++ b/HierarchicalControls/Views/Home/StudentsList.cshtml
@@ -3,4 +3,7 @@
 @model List<HierarchicalControls.Models.Student>
 
 @Html.HierarchicalDropDown("studentsDropDown", "Students Selection", Model.Select(x=> new HierarchicalItem() { ID = x.ID, Name = x.Name, ParentID = x.ParentID }).ToList())
+
+@Html.HierarchicalDropDownObject("studentsDropDown", "Students Selection", Model)
+
 <script src="~/Scripts/hierarchicalcontrols.js"></script>
